[gd_scene load_steps=2 format=3 uid="uid://h5rcomklnxkh"]

[ext_resource type="Script" uid="uid://d18uiht3kk45i" path="res://scripts/fase1/etapa2_fase1.gd" id="1_151ce"]

[node name="Etapa2Fase1" type="Node2D"]
script = ExtResource("1_151ce")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(485, 280)
offset_left = -2.0
offset_top = -4.0
offset_right = 483.0
offset_bottom = 276.0
color = Color(0.3019608, 0.8235294, 0.81960785, 1)

[node name="resposta" type="Button" parent="."]
offset_left = 316.0
offset_top = 216.0
offset_right = 324.0
offset_bottom = 224.0

[node name="resposta2" type="Button" parent="."]
offset_left = 316.0
offset_top = 162.0
offset_right = 324.0
offset_bottom = 170.0

[node name="resposta3" type="Button" parent="."]
offset_left = 316.0
offset_top = 108.0
offset_right = 324.0
offset_bottom = 116.0

[node name="resposta4" type="Button" parent="."]
offset_left = 316.0
offset_top = 54.0
offset_right = 324.0
offset_bottom = 62.0

[node name="Sprite1" type="Sprite2D" parent="."]
position = Vector2(90, 90)
scale = Vector2(0.06, 0.06)

[node name="Sprite2" type="Sprite2D" parent="."]
position = Vector2(90, 180)
scale = Vector2(0.06, 0.06)

[connection signal="button_down" from="resposta" to="." method="_on_resposta_button_down"]
[connection signal="button_down" from="resposta2" to="." method="_on_resposta_2_button_down"]
[connection signal="button_down" from="resposta3" to="." method="_on_resposta_3_button_down"]
[connection signal="button_down" from="resposta4" to="." method="_on_resposta_4_button_down"]
